--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -37,7 +37,7 @@
     </div>
     <div id="mainDivRight">
         <h3 id="auditHeader">
-            Event Audit
+            Audit Log
         </h3>
         <div id="auditScrollDiv">
             <table>
